@@ -1,25 +1,0 @@
-syntax: glob
-*.o
-*.d
-*.gcda
-*.gcno
-*.orig
-*.rej
-.depend
-*.gcov
-*.csv
-core
-src/position.hh
-src/stack.hh
-src/location.hh
-src/tokenizer.cc
-src/xproto.cc
-src/xproto.h
-src/xproto_tok.cc
-bin/wfc
-src/version.h
-src/template_lib.cc
-src/template_lib.h
-testsuite/fs_*
-testsuite/wfccore.*
-CMakeFiles
