@@ -1,13 +1,0 @@
-6aa2dc284081411db61fc68cfaf3084d45c44a98 V0.2.0
-a1bcb81df2c7e1178b856e06356c5629959e3d5e V0.3.0
-320aa64734aec314a9bcfed0240503a2554e1274 V0.4.0
-2be06f7c9dd7aee4030b48af6c759bd7cfd366ff V0.5.0
-a4e3df606f26d13db9dc5a52792b26d20447c85c R1902
-eb8e236df9c304c806022844607cd93ea40c58a0 R1905
-f7ae80f3c35d8fc9e5a0f4b09ec04a760fc13171 R1907
-d20eb614831408017f98afbc1a92594de6dfb9ba R2001
-224875b278e048db743679fcadb73b39a0a9d250 R2002
-77bf0cf42b270324e7405b4003618985042e7fb8 R2003
-90c6e7a8adbaa8a43b6b4e0bf1a16ec86b061220 R2003
-d33a126ada09b0566e419c022a6dd0ab2bb5ba38 R2005
-76e21b0eb117a56a7e5d3b162de395b948bf3682 R2007
